--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "lib": ["ES2015", "ES2017", "ES2018", "ES2019", "ES2020", "DOM"],
+    "target": "ES2017",
+    "module": "esnext",
+    "moduleResolution": "node",
     "paths": {
       "@/*": [
         "./*"
