chore: enhance TypeScript configuration for React Native
- updates TypeScript settings to support React Native with JSX
- adds options for synthetic default imports, module resolution, and JSON module support
- excludes node_modules from TypeScript compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "lib": ["ES2015", "ES2017", "ES2018", "ES2019", "ES2020", "DOM"],
     "target": "ES2017",
     "module": "esnext",
     "moduleResolution": "node",
+    "jsx": "react-native",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "paths": {
       "@/*": [
         "./*"
@@ -17,5 +23,8 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
