--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": ["ES2015", "ES2017", "ES2018", "ES2019", "ES2020", "DOM"],
+    "lib": [
+      "ES2015",
+      "ES2017",
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "DOM"
+    ],
     "target": "ES2017",
     "module": "esnext",
     "moduleResolution": "node",
@@ -26,5 +33,6 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
