--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": [
-      "ES2015",
-      "ES2017",
-      "ES2018",
-      "ES2019",
-      "ES2020",
-      "DOM"
-    ],
-    "target": "ES2017",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ES2020",
     "jsx": "react-native",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -19,6 +9,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": [
         "./*"
